--- a/README
+++ b/README
@@ -1,15 +1,35 @@
-This tool updates your Go imports, adding missing ones and removing
-unreferenced ones.
+This tool updates your Go import lines, adding missing ones and
+removing unreferenced ones.
 
-It's a fork of gofmt, and will also fmt your code, so it can be used
-as a replacement for your gofmt-on-save hook in your editor.
+     $ go get github.com/bradfitz/goimports
+
+It's a fork of gofmt, and will also format your code, so it can be
+used as a replacement for your gofmt-on-save hook in your editor.
+
+For emacs, make sure you have the latest (Go 1.2) go-mode.el:
+https://go.googlecode.com/hg/misc/emacs/go-mode.el
+
+Then in your .emacs file:
+
+   (setq gofmt-command "goimports")
+   (add-to-list 'load-path "/home/you/goroot/misc/emacs/")
+   (require 'go-mode-load)
+   (add-hook 'before-save-hook 'gofmt-before-save)
+
+Or for vim, set "gofmt_command" to "goimports":
+
+    https://code.google.com/p/go/source/detail?r=39c724dd7f252
+    https://code.google.com/p/go/source/browse#hg%2Fmisc%2Fvim
+    etc
+
+Happy hacking!
 
 Caveats:
 
 For removal, it assumes the import path base matches the package name,
 which is best practice anyway, like:
 
-    import "github.com/you/foo" // assumes to import package "foo"
+    import "github.com/you/foo" // assumes this is package "foo"
 
 If they don't match, explictly name the package name in your import
 line:
