Replace docs with reference to docs elsewhere.

--- a/README
+++ b/README
@@ -7,30 +7,11 @@ removing unreferenced ones.
      go.tools repo. Pull requests here will no longer be accepted.
      Please use the Go process: http://golang.org/doc/contribute.html
 
-Old notes, still relevant, but unmaintained:
+It acts the same as gofmt (same flags, etc) but in addition to code
+formatting, also fixes imports.
 
-It's a fork of gofmt, and will also format your code, so it can be
-used as a replacement for your gofmt-on-save hook in your editor of
-choice.
+See usage and editor integration notes, now moved elsewhere:
 
-For emacs, make sure you have the latest (Go 1.2) go-mode.el:
-   https://go.googlecode.com/hg/misc/emacs/go-mode.el
-
-Then in your .emacs file:
-   (setq gofmt-command "goimports")
-   (add-to-list 'load-path "/home/you/goroot/misc/emacs/")
-   (require 'go-mode-load)
-   (add-hook 'before-save-hook 'gofmt-before-save)
-
-For vim, set "gofmt_command" to "goimports":
-
-    https://code.google.com/p/go/source/detail?r=39c724dd7f252
-    https://code.google.com/p/go/source/browse#hg%2Fmisc%2Fvim
-    etc
-
-For GoSublime, follow the steps described here:
-    http://michaelwhatcott.com/gosublime-goimports/
-
-For other editors, you probably know what to do.
+   http://godoc.org/code.google.com/p/go.tools/cmd/goimports
 
 Happy hacking!
